--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'cz.msebera.android:httpclient:4.4.1.1'
     compile 'com.android.support:design:25.0.0'
+    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
